<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000"
        android:id="@+id/RegistrationToolBar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/Theme.AppCompat.Light"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        />
    <EditText
        android:id="@+id/RegistrationLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/HintLog"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:background="@drawable/inputs"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        />
    <EditText
        android:id="@+id/RegistrationPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/HintPass"
        android:layout_margin="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:background="@drawable/inputs"
        android:padding="10dp"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        />
    <Button
        android:id="@+id/RegistrationLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RegisterText"
        android:textAllCaps="false"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:background="@color/white"
        />
    <TextView
        android:id="@+id/RegisterQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RegisterQuestion"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_margin="10dp"
        android:padding="10dp"

        />


</LinearLayout>