<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/AddTask"
        android:gravity="center"
        android:background="@color/black"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textSize="20sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal"
        android:background="@drawable/inputs_black">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Task"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4">
            <EditText
                android:id="@+id/Task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Task"

                android:textStyle="bold"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                />
        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal"
        android:background="@drawable/inputs_black">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DescriptionTask"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:textColor="@color/black"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4">
            <EditText
                android:id="@+id/Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/DescriptionTask"

                android:textStyle="bold"
                android:layout_margin="10dp"
                android:textColor="@color/black"/>
        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">
            <Button
                android:id="@+id/CancelButton"
                android:text="@string/Cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:background="@color/black"
                android:layout_margin="15dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </Button>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">
            <Button
                android:id="@+id/SaveButton"
                android:text="@string/Save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:background="@color/black"
                android:layout_margin="15dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </Button>

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>